--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,20 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
+
+  assets:
+      
+
+      - img/basket.jpg
+      - img/box.jpg
+      - img/course.jpg
+      - img/foot.jpg
+      - img/lion.jpg
+      - img/courone.png
+      - img/royaume.png
+      - img/ragnar.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -75,9 +86,14 @@ flutter:
   # example:
   # fonts:
   #   - family: Schyler
-  #     fonts:
+  fonts:
+    - family: Angels
+      fonts:
+        - asset: ./fonts/Angels.ttf
+          weight: 700
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
+
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
